--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,16 +10,21 @@
     "inlineSourceMap": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
+
     "strict": true,
+
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
-    "alwaysStrict": true, 
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+
     "traceResolution": false,
     "listEmittedFiles": false,
     "listFiles": false,
