--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,10 @@
-"env": {
-    "jest": true
+{
+  "env": {
+      "jest": true
+  },
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "plugin:@typescript-eslint/recommended"
+  ]
 }
