--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/**"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   "homepage": "https://github.com/ShaneLee/tonad#readme",
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
     "jest": "^26.6.3"
   },
   "dependencies": {
