--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "Programming",
     "Functor"
   ],
-  "author": "Shane Lee",
+  "author": "Shane Lee <me@shanel.ee>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ShaneLee/tonad/issues"
@@ -29,10 +29,8 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "jest": "^26.6.3"
-  },
-  "dependencies": {
     "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7"
+    "@babel/preset-typescript": "^7.12.7",
+    "jest": "^26.6.3"
   }
 }
